Added hover to buttons on css, changed font, still have not decided what's best background color, will decide later

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -23,10 +24,10 @@
             <h2>Question</h2>
         </div>
         <div class="answers-container">
-            <button class="option option1">answer1</button>
-            <button class="option option2">answer2</button>
-            <button class="option option3">answer3</button>
-            <button class="option option4">answer4</button>
+            <button class="option option1">Answer 1</button>
+            <button class="option option2">Answer 2</button>
+            <button class="option option3">Answer 3</button>
+            <button class="option option4">Answer 4</button>
         </div>
         <div class="buttons">
             <button class="submit">Submit</button>
