--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Harry Potter Trivia</title>
 </head>
 <body>
     <div class="main-game">
@@ -17,13 +17,13 @@
             </div>
             <div class="score-div">   
                 <h4 class="score-title">SCORE</h4>
-                <h3 class="score">0000</h3>
+                <h3 class="score">0</h3>
             </div>
         </div>
         <div class="question-container">
-            <h2>Question</h2>
+            <h2 class="question">Question</h2>
         </div>
-        <div class="answers-container">
+        <div id="answers-container">
             <button class="option option1">Answer 1</button>
             <button class="option option2">Answer 2</button>
             <button class="option option3">Answer 3</button>
@@ -31,9 +31,9 @@
         </div>
         <div class="buttons">
             <button class="submit">Submit</button>
-            <button class="active next">Next</button>
+            <button class="next">Next</button>
         </div>
-        <script src="script.js"></script>
+        <script defer src="script.js"></script>
     </div>
 </body>
 </html>
