Added a div to display correct or incorrect after choosing an answer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="score-div">   
                 <h4 class="score-title">SCORE</h4>
-                <h3 class="score">0</h3>
+                <h3 class="score">000</h3>
             </div>
         </div>
         <div class="question-container">
@@ -29,9 +29,12 @@
             <button class="option option3">Answer 3</button>
             <button class="option option4">Answer 4</button>
         </div>
+        <div class="final-message">
+            <p id="final"></p>
+        </div>
         <div class="buttons">
-            <button class="submit">Submit</button>
-            <button class="next">Next</button>
+            <!-- <button class="submit">Submit</button> -->
+            <button class="next hide">Next</button>
         </div>
         <script defer src="script.js"></script>
     </div>
