--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
     <title>Harry Potter Trivia</title>
 </head>
 <body>
@@ -15,28 +16,32 @@
             <div class="main-title">
                 <h1>Harry Potter trivia</h1>
             </div>
+            <div class="final-message hide">
+                <h2>Congratulations</h2>
+            </div>
             <div class="score-div">   
                 <h4 class="score-title">SCORE</h4>
                 <h3 class="score">000</h3>
             </div>
         </div>
-        <div class="question-container">
-            <h2 class="question">Question</h2>
+        <div class="end-page"> 
+            <div class="question-container">
+                <h2 class="question">Question</h2>
+            </div>
+            <div id="answers-container">
+                <button class="option option1">Answer 1</button>
+                <button class="option option2">Answer 2</button>
+                <button class="option option3">Answer 3</button>
+                <button class="option option4">Answer 4</button>
+            </div>
+            <div class="result-container">
+                <p id="result"></p>
+            </div>
+            <div class="buttons">
+                <button class="next hide">Next</button>
+            </div>
         </div>
-        <div id="answers-container">
-            <button class="option option1">Answer 1</button>
-            <button class="option option2">Answer 2</button>
-            <button class="option option3">Answer 3</button>
-            <button class="option option4">Answer 4</button>
+            <script defer src="script.js"></script>
         </div>
-        <div class="final-message">
-            <p id="final"></p>
-        </div>
-        <div class="buttons">
-            <!-- <button class="submit">Submit</button> -->
-            <button class="next hide">Next</button>
-        </div>
-        <script defer src="script.js"></script>
-    </div>
-</body>
-</html>
+    </body>
+    </html>
