Start page was added, still going to style better, but it's working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 <body>
     <div class="main-game">
-        <div class="main-top">
+        <div class="start-page">
+            <div class="welcome-message">
+                <h1>Welcome to<br>Harry Potter Trivia</h1>
+            </div>
+            <div class="image">
+                <img src="./images/Screen Shot 2022-05-02 at 6.27.47 PM.png" alt="harry-potter-glasses" class="harry-glasses">
+            </div>
+            <div class="start">
+                <h4 class="start-btn" >START</h4>
+            </div>
+        </div>
+        <div class="main-top hide">
             <div class="main-title">
                 <h1>Harry Potter trivia</h1>
             </div>
@@ -24,7 +35,7 @@
                 <h3 class="score">000</h3>
             </div>
         </div>
-        <div class="end-page"> 
+        <div class="end-page hide"> 
             <div class="question-container">
                 <h2 class="question">Question</h2>
             </div>
