Sound Effects added, made futher improvements on CSS for mobile devices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-game">
         <div class="start-page">
             <div class="welcome-message">
-                <h1>Welcome to<br>Harry Potter Trivia</h1>
+                <h1 class="welcome">Welcome to<br>Harry Potter Trivia</h1>
             </div>
             <div class="image">
                 <img src="./images/Screen Shot 2022-05-02 at 6.27.47 PM.png" alt="harry-potter-glasses" class="harry-glasses">
@@ -24,20 +24,25 @@
             </div>
         </div>
         <div class="main-top hide">
-            <div class="main-title">
-                <h1>Harry Potter trivia</h1>
-            </div>
-            <div class="final-message hide">
-                <h2>Congratulations</h2>
-            </div>
-            <div class="score-div">   
-                <h4 class="score-title">SCORE</h4>
-                <h3 class="score">000</h3>
-            </div>
+                <div class="main-title">
+                    <h1 class="hp-title">Harry Potter trivia</h1>
+                </div>
+                <div class="final-message hide">
+                    <h2></h2>
+                </div>
+                <div class="score-div">   
+                    <h4 class="score-title">SCORE</h4>
+                    <h3 class="score">00</h3>
+                </div>
         </div>
         <div class="end-page hide"> 
-            <div class="question-container">
-                <h2 class="question">Question</h2>
+            <div class="question-and-count">
+                <div class="counter">
+                        Question 1 out of 10
+                    </div>
+                <div class="question-container">
+                    <h2 class="question">Question</h2>
+                </div>
             </div>
             <div id="answers-container">
                 <button class="option option1">Answer 1</button>
