Play again button was added at the end page - Pseudocode and reference links were added to the code. Removed all console logs. Fixed Indentation.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="http://fonts.cdnfonts.com/css/harry-potter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="#">
     <title>Harry Potter Trivia</title>
 </head>
 <body>
@@ -29,6 +30,9 @@
                 </div>
                 <div class="final-message hide">
                     <h2></h2>
+                </div>
+                <div class="play-again hide">
+                    <h5 class="again">Play Again!</h5>
                 </div>
                 <div class="score-div">   
                     <h4 class="score-title">SCORE</h4>
