--- a/index.html
+++ b/index.html
@@ -41,18 +41,16 @@
         </div>
         <div class="end-page hide"> 
             <div class="question-and-count">
-                <div class="counter">
-                        Question 1 out of 10
-                    </div>
+                <div class="counter"></div>
                 <div class="question-container">
-                    <h2 class="question">Question</h2>
+                    <h2 class="question"></h2>
                 </div>
             </div>
             <div id="answers-container">
-                <button class="option option1">Answer 1</button>
-                <button class="option option2">Answer 2</button>
-                <button class="option option3">Answer 3</button>
-                <button class="option option4">Answer 4</button>
+                <button class="option option1"></button>
+                <button class="option option2"></button>
+                <button class="option option3"></button>
+                <button class="option option4"></button>
             </div>
             <div class="result-container">
                 <p id="result"></p>
